--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.css
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.css
@@ -1,21 +1,3 @@
-.panel-formcontextualhelp {
-    background-color: #F2F2F2;
-}
+.form-wrapper{padding:7.5rem 5rem;width:61.25rem;margin:0 auto}.default-content-wrapper, .form-wrapper{padding:2rem 1rem;font-family:"Atkinson Hyperlegible Next", sans-serif;font-size:1rem;color:#333333}.panel-formcontextualhelp{padding:1.25rem 0.875rem;background-color:#f2f2f2;display:block;border-radius:8px}.panel-formcontextualhelp > legend{margin-bottom:0;display:flex}.panel-formcontextualhelp .panel-formcontextualhelp__header{display:flex;align-items:center;margin-bottom:0.625rem}.panel-formcontextualhelp .panel-formcontextualhelp__icon{margin-right:0.75rem}.panel-formcontextualhelp--info .panel-formcontextualhelp__icon{content:url("info-icon.png");width:1.5rem}.panel-formcontextualhelp--info .panel-formcontextualhelp__footer__link-icon{content:url("external-icon.png");width:1.375rem}.panel-formcontextualhelp--info .panel-formcontextualhelp__footer__link-text{margin-right:0.75rem}.panel-formcontextualhelp--info .panel-formcontextualhelp__footer__link{display:flex;align-items:center;margin-top:0.5rem}
 
-.panel-formcontextualhelp--warning{
-    background-color: lemonchiffon
-}
-
-.panel-formcontextualhelp--error{
-    background-color:darksalmon;
-}
-
-.panel-formcontextualhelp .panel-formcontextualhelp__icon {
-    content: url('info-icon.png');
-    width: 24px;
-}
-
-.panel-formcontextualhelp .panel-formcontextualhelp__footer__link-icon {
-    content: url('external-icon.png');
-    width: 22px;
-}
+/*# sourceMappingURL=formcontextualhelp.css.map */
