feat(form) black disc

--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -31,7 +31,7 @@ ul {
     margin-bottom: $spacing-200;
 
     &::marker {
-      color: $stroke-tertiary;
+      color: $color-grey-black-80;
     }
   }
 }
