fix(form): contextual help footer position

--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -40,6 +40,10 @@
     margin-right: 12px;
   }
 
+  .panel-formcontextualhelp__footer {
+    display: inline-block;
+  }
+
   .panel-formcontextualhelp__footer__link {
     display: flex;
     align-items: center;
