--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -8,6 +8,7 @@
   background-color: #f2f2f2;
   display: block;
   border-radius: $border-radius-mid;
+  margin-bottom: 32px;
 
   > legend {
     margin-bottom: 0;
