--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -398,22 +398,22 @@
 //   height: auto;
 // }
 
-// .panel-wrapper {
-//   &.field-top-nav {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     padding: 32px 24px;
+.panel-wrapper {
+  &.field-top-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 32px 24px;
 
-//     .image-wrapper picture {
-//       max-width: 150px;
+    .image-wrapper picture {
+      max-width: 150px;
 
-//       @include media('desktop') {
-//         max-width: 300px;
-//       }
-//     }
-//   }
-// }
+      @include media('desktop') {
+        max-width: 300px;
+      }
+    }
+  }
+}
 
 /* For cards with icons or images */
 // main .form form fieldset.cards > .checkbox-wrapper > label > img
