fix(form): legend hidden

--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -577,9 +577,9 @@
 // padding: 20px var(--form-wizard-padding);
 // }
 
-// main .form form .wizard > fieldset > legend {
-//   display: none;
-// }
+main .form form .wizard > fieldset > legend {
+  display: none;
+}
 
 // main .form form .wizard > fieldset:not(.current-wizard-step) {
 //   display: none;
