--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -14,6 +14,32 @@ fieldset {
   border: 0;
 }
 
+main .form .form-image-wrapper img {
+  max-width: 100%;
+  height: auto;
+}
+
+.panel-wrapper {
+  &.field-top-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 32px 24px;
+
+    .image-wrapper picture {
+      max-width: 150px;
+
+      @include media('desktop') {
+        max-width: 300px;
+      }
+    }
+  }
+}
+
+main .form form .wizard > fieldset > legend {
+  display: none;
+}
+
 .multiline-wrapper {
   label {
     margin-bottom: 8px;
