--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -113,11 +113,11 @@ main .form > div:not(:first-child) {
 //   gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
 // }
 
-main .form form fieldset {
-  border: var(--form-fieldset-border);
-  margin: var(--form-fieldset-marign);
-  width: 100%;
-}
+// main .form form fieldset {
+//   border: var(--form-fieldset-border);
+//   margin: var(--form-fieldset-marign);
+//   width: 100%;
+// }
 
 // main .form form fieldset fieldset {
 //   padding: 0;
@@ -171,31 +171,31 @@ main .form form .checkbox-wrapper.field-invalid {
   flex-wrap: wrap;
 }
 
-main .form select {
-  padding-top: 0;
-  padding-bottom: 0;
-}
+// main .form select {
+//   padding-top: 0;
+//   padding-bottom: 0;
+// }
 
-main .form input,
-main .form textarea,
-main .form select {
-  background-color: var(--form-input-background-color);
-  border: var(--form-input-border-size) solid var(--form-input-border-color);
-  width: 100%;
-  height: 42px;
-  color: var(--form-label-color);
-  padding: var(--form-input-padding);
-  font-size: var(--form-input-font-size);
-  max-width: unset;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-  border-radius: 0.25rem;
-}
+// main .form input,
+// main .form textarea,
+// main .form select {
+//   background-color: var(--form-input-background-color);
+//   border: var(--form-input-border-size) solid var(--form-input-border-color);
+//   width: 100%;
+//   height: 42px;
+//   color: var(--form-label-color);
+//   padding: var(--form-input-padding);
+//   font-size: var(--form-input-font-size);
+//   max-width: unset;
+//   margin-top: 0.5rem;
+//   margin-bottom: 1rem;
+//   border-radius: 0.25rem;
+// }
 
-main .form input:hover,
-main .form select:hover {
-  border-color: rgb(90 92 96);
-}
+// main .form input:hover,
+// main .form select:hover {
+//   border-color: rgb(90 92 96);
+// }
 
 main .form input:disabled {
   background-color: var(--form-input-disable-color);
@@ -213,15 +213,15 @@ main .form input[type='file'] {
   color: unset;
 }
 
-main .form input[type='checkbox'],
-main .form input[type='radio'] {
-  width: 16px;
-  height: 16px;
-  flex: none;
-  margin: 0;
-  position: static;
-  z-index: 1;
-}
+// main .form input[type='checkbox'],
+// main .form input[type='radio'] {
+//   width: 16px;
+//   height: 16px;
+//   flex: none;
+//   margin: 0;
+//   position: static;
+//   z-index: 1;
+// }
 
 main .form textarea {
   min-height: 100px;
@@ -237,7 +237,7 @@ main .form fieldset:not(.checkbox-group-wrapper, .radio-group-wrapper) legend {
   margin-bottom: 10px;
 }
 
-main .form label,
+// main .form label,
 main .form fieldset.checkbox-group-wrapper legend,
 main .form fieldset.radio-group-wrapper legend {
   font-weight: var(--form-label-font-weight);
@@ -295,57 +295,57 @@ main .form form fieldset > .checkbox-wrapper {
   margin-left: var(--form-field-gap);
 }
 
-main .form .radio-wrapper label,
-main .form .checkbox-wrapper label {
-  flex-basis: calc(100% - 24px);
-}
+// main .form .radio-wrapper label,
+// main .form .checkbox-wrapper label {
+//   flex-basis: calc(100% - 24px);
+// }
 
-main .form fieldset.link .checkbox-wrapper label {
-  flex-basis: unset;
-}
+// main .form fieldset.link .checkbox-wrapper label {
+//   flex-basis: unset;
+// }
 
-main .form form fieldset.cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.75rem;
-  margin-top: 0.5rem;
-}
+// main .form form fieldset.cards {
+//   display: flex;
+//   flex-wrap: wrap;
+//   gap: 0.75rem;
+//   margin-top: 0.5rem;
+// }
 
-main .form form fieldset.cards > .radio-wrapper,
-main .form form fieldset.cards > .checkbox-wrapper {
-  margin: 0;
-  position: relative;
-  flex: 1 1 auto;
-  min-width: 180px;
-  max-width: 300px;
-}
+// main .form form fieldset.cards > .radio-wrapper,
+// main .form form fieldset.cards > .checkbox-wrapper {
+//   margin: 0;
+//   position: relative;
+//   flex: 1 1 auto;
+//   min-width: 180px;
+//   max-width: 300px;
+// }
 
-main .form form fieldset.cards > .radio-wrapper > label,
-main .form form fieldset.cards > .checkbox-wrapper > label {
-  display: flex;
-  gap: 0.5rem;
-  margin: 0;
-  border: 1px solid var(--form-card-border-color);
-  border-radius: var(--form-card-border-radius);
-  padding: var(--form-card-padding);
-  background-color: var(--form-card-background);
-  cursor: pointer;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  box-shadow: var(--form-card-shadow);
-  transition: var(--form-card-transition);
-  font-weight: normal;
-  color: var(--form-label-color);
-  font-size: 0.95em;
-}
+// main .form form fieldset.cards > .checkbox-wrapper > label
+// main .form form fieldset.cards > .radio-wrapper > label {
+//   display: flex;
+//   gap: 0.5rem;
+//   margin: 0;
+//   border: 1px solid var(--form-card-border-color);
+//   border-radius: var(--form-card-border-radius);
+//   padding: var(--form-card-padding);
+//   background-color: var(--form-card-background);
+//   cursor: pointer;
+//   align-items: center;
+//   width: 100%;
+//   height: 100%;
+//   box-shadow: var(--form-card-shadow);
+//   transition: var(--form-card-transition);
+//   font-weight: normal;
+//   color: var(--form-label-color);
+//   font-size: 0.95em;
+// }
 
-main .form form fieldset.cards > .radio-wrapper > label:hover,
-main .form form fieldset.cards > .checkbox-wrapper > label:hover {
-  box-shadow: var(--form-card-hover-shadow);
-  border-color: #ccc;
-  transform: translateY(-1px);
-}
+// main .form form fieldset.cards > .radio-wrapper > label:hover,
+// main .form form fieldset.cards > .checkbox-wrapper > label:hover {
+//   box-shadow: var(--form-card-hover-shadow);
+//   border-color: #ccc;
+//   transform: translateY(-1px);
+// }
 
 main .form form fieldset.cards.horizontal {
   flex-direction: row;
@@ -372,37 +372,37 @@ main .form form fieldset.cards > .checkbox-wrapper > input {
   height: 0;
 }
 
-main .form form fieldset.cards > .radio-wrapper > input:checked ~ label,
-main .form form fieldset.cards > .checkbox-wrapper > input:checked ~ label {
-  border: 1px solid var(--form-card-selected-border-color);
-  background-color: var(--form-card-selected-background);
-  box-shadow: var(--form-card-selected-shadow);
-  transform: translateY(0);
-  font-weight: 500;
-}
+// main .form form fieldset.cards > .radio-wrapper > input:checked ~ label,
+// main .form form fieldset.cards > .checkbox-wrapper > input:checked ~ label {
+//   border: 1px solid var(--form-card-selected-border-color);
+//   background-color: var(--form-card-selected-background);
+//   box-shadow: var(--form-card-selected-shadow);
+//   transform: translateY(0);
+//   font-weight: 500;
+// }
 
-main .form form fieldset.cards > .radio-wrapper > input:checked ~ label::after,
-main
-  .form
-  form
-  fieldset.cards
-  > .checkbox-wrapper
-  > input:checked
-  ~ label::after {
-  content: '';
-  display: inline-block;
-  width: 8px;
-  height: 8px;
-  background-color: var(--button-primary-color);
-  border-radius: 50%;
-  margin-left: auto;
-}
+// main .form form fieldset.cards > .radio-wrapper > input:checked ~ label::after,
+// main
+//   .form
+//   form
+//   fieldset.cards
+//   > .checkbox-wrapper
+//   > input:checked
+//   ~ label::after {
+//   content: '';
+//   display: inline-block;
+//   width: 8px;
+//   height: 8px;
+//   background-color: var(--button-primary-color);
+//   border-radius: 50%;
+//   margin-left: auto;
+// }
 
-main .form form fieldset.cards > .radio-wrapper > input:focus ~ label,
-main .form form fieldset.cards > .checkbox-wrapper > input:focus ~ label {
-  outline: none;
-  box-shadow: 0 0 0 1px var(--button-primary-color);
-}
+// main .form form fieldset.cards > .radio-wrapper > input:focus ~ label,
+// main .form form fieldset.cards > .checkbox-wrapper > input:focus ~ label {
+//   outline: none;
+//   box-shadow: 0 0 0 1px var(--button-primary-color);
+// }
 
 main .form .form-image-wrapper img {
   max-width: 100%;
