fix(form 967): JSP intro responsiveness

--- a/styles/settings/_index.scss
+++ b/styles/settings/_index.scss
@@ -1,3 +1,10 @@
+// --- !!!!!!!!!! ---
+/// Settings is for extract-able value, things like
+/// $ Variables, % Placeholder, @include mixin
+/// Not a class name ".something", because this will be
+/// Added into all of the SCSS file that included setting file
+// --- !!!!!!!!!! ---
+
 @forward './colors';
 @forward './fonts';
 @forward './tokens';
@@ -6,5 +13,3 @@
 @forward './spacings';
 @forward './borders';
 @forward './elevations';
-@forward './wrappers';
-//@forward './tabs';
