--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -18,18 +18,33 @@
   .panel-formcontextualhelp__header {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: $spacing-200;
   }
 
   .panel-formcontextualhelp__icon {
     margin-right: 12px;
+    width: 24px;
+    height: 24px;
+  }
+
+  .panel-formcontextualhelp__title {
+    font-weight: 500;
+  }
+
+  .plain-text-wrapper {
+    p {
+      margin-top: 0;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 }
 
 .panel-formcontextualhelp--info {
   .panel-formcontextualhelp__icon {
     content: url('info-icon.png');
-    width: 24px;
   }
 
   .panel-formcontextualhelp__footer__link-icon {
