Style(Wrappers): Fixing the wrappers so UI can test responsive

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -42,6 +42,6 @@
 
 // Testing only - can be deleted
 /*.typography-wrapper {background-color: aquamarine}
-.default-content-wrapper {background-color: #f8d7da}**/
+.default-content-wrapper {background-color: #f8d7da}*/
 
 
