--- a/blocks/form/components/course/course.css
+++ b/blocks/form/components/course/course.css
@@ -1,3 +1,3 @@
-.course .suggestions{border:1px solid #ccc;border-top:none;max-height:9.375rem;overflow-y:auto;background-color:#fff;position:absolute;width:100%;z-index:1000}.course .suggestion{padding:0.625rem;cursor:pointer}.course .suggestion:hover{background-color:#f0f0f0}
+.course{position:relative}.course .suggestions{border:1px solid #ccc;border-top:none;max-height:9.375rem;overflow-y:auto;background-color:#fff;position:absolute;width:100%;z-index:1000;bottom:-1.125rem;left:0}.course .suggestion{padding:0.625rem;cursor:pointer}.course .suggestion:hover{background-color:#f0f0f0}
 
 /*# sourceMappingURL=course.css.map */
