--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -10,7 +10,7 @@ $font-family: 'Atkinson Hyperlegible Next', sans-serif;
 $size-font-base: 16px;
 
 /* Headings */
-$size-font-h1: clamp(48px, 5.2vw, 61px);
+$size-font-h1: 48px; /*clamp(48px, 5.2vw, 61px);*/
 $size-font-h2: 38px;
 $size-font-h3: 32px;
 $size-font-h4: 24px;
