chore(style): instruction

--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -1,3 +1,6 @@
+/// Temporarily solution to extract placeholder
+/// To be used by external file
+
 @use '../settings/elevations' as *;
 @use '../settings/colors' as *;
 @use '../settings/spacings' as *;
