--- a/blocks/form/components/repeatable-panel/repeatable-panel.css
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.css
@@ -1,29 +1,3 @@
-.panel-repeatable-panel{
-    background-color:aquamarine;
-}
+main .form form .panel-repeatable-panel .repeat-actions{display:none}main .form form .panel-repeatable-panel .item-remove{display:none!important}main .form form .panel-repeatable-panel .editing .item-add{display:none!important}main .form form .panel-repeatable-panel [data-repeatable].saved{display:none}main .form form .panel-repeatable-panel [data-repeatable]:not(.saved){display:block}main .form form .panel-repeatable-panel .btn-save, main .form form .panel-repeatable-panel .btn-cancel{display:none}main .form form .panel-repeatable-panel [data-repeatable].current .btn-save, main .form form .panel-repeatable-panel [data-repeatable].current .btn-cancel{display:block}
 
-.panel-repeatable-panel [data-repeatable].saved{
-    display: none;
-}
-
-.panel-repeatable-panel [data-repeatable]:not(.saved){
-    display: block;
-}
-
-.panel-repeatable-panel .btn-save,
-.panel-repeatable-panel .btn-cancel{
-    display: none;
-}
-
-.panel-repeatable-panel [data-repeatable].current .btn-save,
-.panel-repeatable-panel [data-repeatable].current .btn-cancel{
-    display: block;
-}
-
-.panel-repeatable-panel.editing .item-add{
-    display: none !important;
-}
-
-.panel-repeatable-panel .item-remove{
-    display: none !important;
-}
+/*# sourceMappingURL=repeatable-panel.css.map */
