Style(Anchor Links): P, P Large, P Small anchors give states, fix list for P Large and P Small

--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -67,7 +67,7 @@ picture {
   width: 100%;
 }
 
-a,
+/*a,
 button {
   @extend %state-focus;
   display: inline-block;
@@ -99,7 +99,7 @@ a {
       color: $color-primary-navy;
     }
   }
-}
+}*/
 
 button {
   border: 0;
