--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -34,6 +34,7 @@
   .plain-text-wrapper {
     p {
       margin-top: 0;
+      padding: $spacing-100 0; // Rebecca: 1/2 the property as we have a double up on the p tag in the wizard
 
       &:last-child {
         margin-bottom: 0;
