--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -127,7 +127,9 @@ main .form > div:not(:first-child) {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 32px 24px;
+    /*padding: 32px 24px;*/ Removed the bottom padding RW
+    padding: $spacing-500 $spacing-400 $spacing-000 $spacing-400;
+
 
     .image-wrapper picture {
       max-width: 150px;
