feat(form) fix syntax error

--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -127,7 +127,7 @@ main .form > div:not(:first-child) {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /*padding: 32px 24px;*/ Removed the bottom padding RW
+    /*padding: 32px 24px; Removed the bottom padding RW*/
     padding: $spacing-500 $spacing-400 $spacing-000 $spacing-400;
 
 
