--- a/blocks/form/components/repeatable-panel/renderers/education.css
+++ b/blocks/form/components/repeatable-panel/renderers/education.css
@@ -1,3 +1,3 @@
-main .form form .panel-repeatable-panel__education > [data-repeatable]{display:none}
+main .form form .panel-repeatable-panel__education{display:none}
 
 /*# sourceMappingURL=education.css.map */
