--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -15,6 +15,8 @@
   .radio-group--with-icon__icon {
     width: 40px;
     height: 40px;
+    display: block;
+    content: url('./icon-streamline.svg');
   }
 
   label {
