--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -30,13 +30,10 @@ $size-font-h6: clamp(1.125rem, 2.5vw, 1.188rem); // 18px → 19px
 $size-font-subtitle: clamp(1.5rem, 3.5vw, 1.75rem); // 24px → 28px
 
 //strap titles
-$size-font-strap-title: clamp(1.25rem, 2.5vw, 1.375rem);
-$size-font-strap-title-small: clamp(0.875rem, 2vw, 0.938rem);
+$size-font-strap-title: clamp(1.25rem, 2.5vw, 1.375rem); // 20px → 22px
+$size-font-strap-title-small: clamp(0.875rem, 2vw, 0.938rem); // 14px → 15px
 
 /* Text */
-$size-font-subtitle: 28px;
-$size-font-strap-title-small: 16px; /* new */
-$size-font-strap-title: 20px;
 $size-font-body-default: $size-font-base;
 $size-font-body-small: 12px;
 $size-font-body-large: 18px;
