--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -6,12 +6,14 @@ main .form form .panel-repeatable-panel {
         .repeatable-entry {
             padding: $spacing-400;
             border: solid 1px $color-secondary;
+            position: relative;
 
             &__edit {
+                position: absolute;
                 width: 56px;
                 height: 26px;
                 background-image: url(./images/edit-icon.png);
-                background-position: 0 center;
+                background-repeat: no-repeat;
                 display: block;
                 text-decoration: underline;
                 padding-left: 28px;
