--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -44,6 +44,12 @@
   }
 }
 
+%button--small {
+  @extend %button--primary;
+  padding: $spacing-300 $spacing-500;
+  font-size: 16px;
+}
+
 %button--primary {
   @extend %state-focus;
   background-image: $color-primary-animated;
