--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -19,7 +19,7 @@
   transition: all 0.2s ease-in-out;
 
   &:focus {
-    box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $color-focus-state;
+    box-shadow: 0 0 0 2px $color-white;/* 0 0 0 4px $color-focus-state;*/
     outline: 3px solid transparent;
   }
 
